#132 [fix] 전체적인 기능 오류, 주석, 변수명을 수정한다.